Fix z-index of designer customizer panel for new color inputs

--- a/skins_adm/bootstrap/rsc/css/style.less
+++ b/skins_adm/bootstrap/rsc/css/style.less
@@ -1945,7 +1945,7 @@ div.query-builder .rule-container .rule-value-container {
 	border-bottom: 1px solid #CCC;
 	background: #FFF;
 	padding: 15px 15px 0 15px;
-	z-index: 1;
+	z-index: 3;
 	.nav {
 		margin-right: 70px;
 	}
@@ -1990,6 +1990,7 @@ div.query-builder .rule-container .rule-value-container {
 	text-align: center;
 	border-top: 1px solid #CCC;
 	background: #FFF;
+	z-index: 3;
 	.form-group, .control-buttons {
 		margin: 0;
 		padding: 0;
